Update - fixed blur overlap and made more responsive

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: row;
-    z-index: 1;
+    z-index: 2;
 }
 
 .container2 {
@@ -13,7 +13,7 @@
     border-radius: 20px;
     padding: 30px;
     margin-top: 45px;
-    z-index: 1;
+    z-index: 2;
     margin-left: 5%;
     width: 50%;
 }
