--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -5,6 +5,7 @@
     margin-top: 79px;
     margin-left: 5%;
     margin-right: 0%;
+    z-index: 2;
 }
 
 .title {
@@ -20,7 +21,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-top: 14px;
+    margin-top: -10px;
 }
 
 .skills {
@@ -215,7 +216,7 @@
     z-index: 0;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 1500px) {
     .content {
         flex-direction: column;
         align-items: center;
@@ -228,10 +229,12 @@
 
     .skills {
         width: 100%;
+        height: 0%;
         flex-direction: row;
         justify-content: center;
         order: -1;
         position: static;
+        display: none;
 
     }
 
@@ -250,12 +253,12 @@
 
     .bottomBlur {
         position: absolute;
-        width: 50vw;
-        height: 50svw;
+        width: 100vw;
+        height: 73svw;
         min-width: 350px;
         min-width: 350px;
-        top: 1800px;
-        left: 50%;
+        top: 1950px;
+        left: auto;
         border-radius: 70px;
         background: rgba(49, 82, 189, 0.7);
         filter: blur(100px);
@@ -264,17 +267,18 @@
     
     .topBlur {
         position: absolute;
-        width: 30vw;
-        height: 30svw;
+        width: 100vw;
+        height: 73svw;
         min-width: 350px;
         min-width: 350px;
-        top: 1980px;
-        right: 58%;
+        top: 2100px;
+        right: auto;
         border-radius: 70px;
         background: rgba(49, 82, 189, 0.7);
         filter: blur(100px);
         z-index: 0;
     }
+
 }
 
 
