--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -10,7 +10,7 @@
     justify-content: center;
     margin-top: 49px;
     text-align: center;
-    z-index: 1;
+    z-index: 2;
     margin-left: 10%;
     margin-right: 10%;
 }
