--- a/src/components/NavBar/Navbar.module.css
+++ b/src/components/NavBar/Navbar.module.css
@@ -8,7 +8,7 @@
     background-color: rgba(29, 29, 29, 0.9);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
     padding-top: 61px;
-    z-index: 2;
+    z-index: 3;
     padding: 30px 0;
     
 }
