--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -11,7 +11,7 @@
     width: 400px;
     padding: 15px;
     max-width: 345px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .container2 {
@@ -52,6 +52,7 @@
     margin-top: 20px;
     font-size: 25px;
     font-weight: 700;
+    z-index: 20;
 }
 
 .description {
