--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -5,15 +5,16 @@
     color: var(--color-text);
     margin-left: 5%;
     margin-right: 5%; 
+    z-index: 1;
 }
 
 .title {
     color: var(--color-text);
-
     font-size: 40px;
     font-weight: 700;
     letter-spacing: 1px;
     text-transform: uppercase;
+    z-index: 1;
 }
 
 .projects {
@@ -34,7 +35,7 @@
     height: 35svw;
     min-width: 350px;
     min-width: 350px;
-    top: 2750px;
+    top: 2720px;
     left: 15%;
     border-radius: 70px;
     background: rgba(49, 82, 189, 0.7);
@@ -43,8 +44,7 @@
 }
 
 @media screen and (max-width: 830px) {
-
-    .title {
-        padding-top: 37px;
+    .bottomBlur {
+        z-index: -1;
     }
 }
