--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,6 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
+
